--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "echarts": "^5.6.0",
+    "marked": "^15.0.11",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
